# dojigiri

./: .bloodworkignore  .doji-ignore  .doji.toml.example  .gitignore  .pre-commit-hooks.yaml  .wiz.toml.example  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  COLLAB.md  CONTRIBUTING.md  FORGING.md  LICENSE  LICENSING.md  MANIFEST.in  PRIVACY.md  README.md  SECURITY.md  TERMS.md  action-README.md  action.yml  build_exe.py  demo.py  mkdocs.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  false_positive.yml  feature_request.yml
.github/workflows/: ci.yml  doji-scan.yml  doji-self-scan.yml  release.yml  traffic-log.yml
benchmarks/: README.md  SUMMARY.md  bandit_fastapi.json  bandit_flask.json  bandit_requests.json  doji_fastapi.json  doji_flask.json  doji_requests.json  head_to_head.py  owasp-general-scorecard-results.md  owasp-scorecard-results.md  owasp_general_results.json  owasp_general_score.py  owasp_scorecard.py  real_world_benchmark.md  run_benchmark.py  semgrep_collect.py
benchmarks/annotations/: express.json  fastapi.json  flask.json  flask_audit_20260316_200515.json  keycloak.json  keycloak_audit_20260318_154800.json  open-interpreter.json  open-interpreter_audit_20260316_214211.json  paperless-ngx.json  paperless-ngx_audit_20260318_154552.json  saleor.json  saleor_audit_20260318_154509.json
benchmarks/vs_semgrep/: RESULTS.md
benchmarks/vs_semgrep/go/command_injection_split/: README.md  main.go
benchmarks/vs_semgrep/go/path_traversal_join/: README.md  main.go
benchmarks/vs_semgrep/go/ssrf_custom_transport/: README.md  handler.go  transport.go
docs/: PYPI_READINESS.md  architecture.md  benchmark-comparison.md  benchmarks.md  business-evaluation.md  ci-integration.md  configuration.md  gap-analysis.md  index.md  legal-evaluation.md  licensing-pitch.md  outreach-coderabbit.md  pricing.md  rules.md
docs/blog/: owasp-benchmark-results.md
docs/features/: auto-fix.md  llm-scan.md  mcp-server.md  sca.md  static-analysis.md
docs/getting-started/: ci-cd.md  installation.md  quickstart.md
docs/legal/: provisional-patent-draft.md
dojigiri/: .wizignore  HANDOFF.md  __init__.py  __main__.py  analyzer.py  ast_checks.py  bundling.py  chunker.py  compliance.py  config.py  context.py  detector.py  discovery.py  fixer.py  hooks.py  java_sanitize.py  languages.py  llm.py  llm_backend.py  llm_focus.py  llm_parsers.py  llm_prompts.py  llm_schemas.py  mcp_format.py  mcp_server.py  metrics.py  plugin.py  pr_review.py  report.py  report_html.py  sanitizers.py  sarif.py  storage.py  taint.py  taint_cross.py  taint_cross_base.py  taint_cross_ts.py  types.py
dojigiri-vscode/: package.json
dojigiri-vscode/src/: codeActions.ts  diagnostics.ts  extension.ts
dojigiri/cli/: __init__.py  common.py  llm.py  project.py  scan.py  setup.py
dojigiri/fixer/: __init__.py  cascade.py  deterministic.py  engine.py  helpers.py  llm_fixes.py
dojigiri/graph/: __init__.py  callgraph.py  depgraph.py  project.py
dojigiri/rules/: __init__.py  _compile.py  go.py  java.py  javascript.py  loader.py  python.py  rust.py  security.py  universal.py
dojigiri/rules/yaml/: csharp.yaml  go.yaml  java.yaml  javascript.yaml  php.yaml  python.yaml  rust.yaml  security.yaml  typescript.yaml  universal.yaml
dojigiri/sca/: __init__.py  osv.py  parsers.py  scanner.py
dojigiri/semantic/: __init__.py  _utils.py  cfg.py  checks.py  core.py  explain.py  lang_config.py  nullsafety.py  resource.py  scope.py  smells.py  taint.py  types.py
koryu-demo/: README.md
koryu-demo/agent/src/: collector.rs  config.rs  main.rs  sender.rs
koryu-demo/dashboard/: api_client.js  app.ts  auth.js  dom_helpers.ts  metrics_panel.js  pipeline_view.ts
koryu-demo/koryu/: __init__.py  auth.py  config.py  database.py
koryu-demo/koryu/api/: __init__.py  handlers.py  server.py
koryu-demo/koryu/ingestion/: api_fetcher.py  csv_loader.py
koryu-demo/koryu/ml/: inference.py  model_registry.py
koryu-demo/koryu/pipeline/: orchestrator.py  scheduler.py  transforms.py
koryu-demo/koryu/utils/: crypto.py  helpers.py
koryu-demo/validator/: handler.go  main.go  schema.go  store.go
reviews/: 2026-03-05-b80ddfa.review.json  2026-03-05-taka-audit.json
tests/: README.md  conftest.py  fold10_vulnerable_samples.py  fold11_vulnerable_samples.py  fold12_vulnerable_samples.py  fold13_vulnerable_samples.py  fold14_vulnerable_samples.py  fold15_vulnerable_samples.py  fold16_vulnerable_samples.py  fold17_vulnerable_samples.py  fold18_vulnerable_samples.py  fold19_vulnerable_samples.py  fold20_vulnerable_samples.py  fold21_vulnerable_samples.py  fold22_vulnerable_samples.py  fold23_vulnerable_samples.py  fold24_vulnerable_samples.py  fold25_vulnerable_samples.py  fold26_vulnerable_samples.py  fold27_vulnerable_samples.py  fold28_vulnerable_samples.py  fold29_vulnerable_samples.py  fold2_analysis.md  fold2_vulnerable_samples.py  fold30_vulnerable_samples.py  fold31_vulnerable_samples.py  fold32_vulnerable_samples.py  fold3_vulnerable_samples.py  fold4_vulnerable_samples.py  fold5_vulnerable_samples.py  fold6_vulnerable_samples.py  fold7_vulnerable_samples.py  fold8_vulnerable_samples.py  fold9_vulnerable_samples.py  test_analyzer.py  test_ast_checks_coverage.py  test_chunker.py  test_chunker_coverage.py  test_cli.py  test_compliance.py  (+66 more)
tests/fixtures/: taint_sanitizer.py
vscode-dojigiri/: .vscodeignore  README.md  package.json  tsconfig.json
vscode-dojigiri/.github/workflows/: build.yml
vscode-dojigiri/src/: extension.ts
wiz/: HANDOFF.md  __init__.py  __main__.py  analyzer.py  chunker.py  config.py  detector.py  fixer.py  languages.py  llm.py  llm_focus.py  mcp_format.py  mcp_server.py  report.py  storage.py  ts_lang_config.py  ts_nullsafety.py  ts_scope.py  ts_semantic.py  ts_types.py
wiz/graph/: __init__.py  callgraph.py  depgraph.py  project.py
wiz/semantic/: __init__.py  _utils.py  cfg.py  checks.py  core.py  explain.py  lang_config.py  nullsafety.py  scope.py  smells.py  taint.py  types.py
(+46 files in other folders)
