[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "wiz-scan"
version = "1.0.0"
description = "Static analysis + LLM-powered code audit tool with tree-sitter semantic analysis"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Stephane"},
]
keywords = ["static-analysis", "linter", "security", "code-quality", "llm", "tree-sitter"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing",
    "Topic :: Security",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]

dependencies = [
    "tree-sitter>=0.24",
    "tree-sitter-language-pack>=0.10",
]

[project.optional-dependencies]
llm = ["anthropic>=0.40.0"]
all = ["anthropic>=0.40.0"]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.scripts]
wiz = "wiz.__main__:main"

[project.urls]
Homepage = "https://github.com/Inklling/Genesis"
Repository = "https://github.com/Inklling/Genesis"
Issues = "https://github.com/Inklling/Genesis/issues"

[tool.setuptools.packages.find]
include = ["wiz*"]

[tool.setuptools.package-data]
wiz = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.10"
warn_return_any = false
warn_unused_configs = true
check_untyped_defs = true
disallow_untyped_defs = false
no_implicit_optional = false
warn_redundant_casts = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = ["tree_sitter.*", "tree_sitter_language_pack.*", "anthropic.*", "tomllib.*", "tomli.*"]
ignore_missing_imports = true

[tool.coverage.run]
source = ["wiz"]
omit = ["tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
